--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Mandatory settings
 
-blog_theme: light # Or use dark
-name: Chalk
+blog_theme: dark # Or use dark
+name: Savant
 paginate: 25
-url: # add your site url (format: https://example.com)
+url: http://sawanta.pl# add your site url (format: https://example.com)
 
 
 # Optional settings
