--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 blog_theme: dark # Or use dark
 name: Savant
 paginate: 25
-url: http://sawanta.pl# add your site url (format: https://example.com)
+url: http://sawanta.pl # add your site url (format: https://example.com)
 
 
 # Optional settings
@@ -55,7 +55,7 @@ assets:
 collections:
   my_tags:
     output: true
-    permalink: /tag/:slug/
+    permalink: /tag/:slug/.html
 defaults:
   -
     scope:
@@ -79,4 +79,4 @@ plugins:
   - jekyll-sitemap
   - jemoji
 paginate_path: /posts/page/:num/
-permalink: posts/:slug
+permalink: posts/:slug.html
